--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.synology",
-  "version": "1.10.3",
+  "version": "1.10.5",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#000000",
@@ -200,7 +200,7 @@
           "sv": "Aktiverad",
           "no": "Slått på",
           "es": "Encendido",
-          "da": "Tændt",
+          "da": "Tænd",
           "ru": "Включено",
           "pl": "Włączone",
           "ko": "켜짐"
@@ -225,7 +225,7 @@
           "sv": "Inaktiverad",
           "no": "Slått av",
           "es": "Apagado",
-          "da": "Slukket",
+          "da": "Sluk",
           "ru": "Выключено",
           "pl": "Wyłączone",
           "ko": "꺼짐"
@@ -251,7 +251,7 @@
           "sv": "Är !{{på|av}}",
           "no": "Er slått !{{på|av}}",
           "es": "Está !{{encendido|apagado}}",
-          "da": "Er !{{tændt|slukket}}",
+          "da": "Er !{{tænd|Sluk}}",
           "ru": "!{{Вкл.|Выкл.}}",
           "pl": "Jest !{{włączone|wyłączone}}",
           "ko": "이(가) !{{켜짐|꺼짐}}"
@@ -366,7 +366,7 @@
           "sv": "Aktivera",
           "no": "Slå på",
           "es": "Encender",
-          "da": "Tændt",
+          "da": "Tænd",
           "ru": "Включить",
           "pl": "Włącz",
           "ko": "켜기"
@@ -416,8 +416,8 @@
           "no": "Veksle mellom på og av",
           "es": "Encender o apagar",
           "da": "Tænd eller sluk",
-          "ru": "Переключатель включить/выключить",
-          "pl": "Przełącz na wł. lub wył.",
+          "ru": "Переключить включить/выключить",
+          "pl": "Przełącz na włączone lub wyłączone",
           "ko": "켬 또는 끔 토글"
         },
         "args": [
